feat: добавлена возможность создания заявки на регистрацию
